fixed contrast

--- a/styles.css
+++ b/styles.css
@@ -18,4 +18,4 @@ button{
     display: flex;
     justify-content: center;
 } */
- 
+ texts i think F8F3EA
